--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,8 +66,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\_GameAssets\Scripts\MoneyManager.cs" />
+    <Compile Include="Assets\_GameAssets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\_GameAssets\Scripts\Animal.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\_GameAssets\Scripts\AnimalInteraction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
